<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/activity_add_recipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            tools:context="com.example.danyaal.cookhelper.EditRecipe"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/add_camera1600"
                android:id="@+id/updateRecipeImage"
                android:layout_marginTop="55dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chooseIngredient"
                android:weightSum="1"

                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/recipeName">

                    <TextView
                        android:text="@string/recipe_name"
                        android:layout_height="wrap_content"
                        android:id="@+id/addRecipeName"
                        android:layout_weight="1"
                        android:textColor="?android:attr/textColorPrimary"
                        android:layout_width="110dp" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/updateRecipeName"
                        android:layout_weight="1"
                        android:hint="@string/add_recipe_name" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/category">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/chooseCategory"
                        android:text="@string/choose_category"
                        android:textColor="?android:attr/textColorPrimary" />

                    <com.jaredrummler.materialspinner.MaterialSpinner
                        android:id="@+id/update_category_spinner"
                        android:layout_width="match_parent"
                        android:text="@string/select_category"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:layout_marginLeft="10dp" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/type">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/chooseType"
                        tools:text="@string/choose_type"
                        android:text="@string/choose_type"
                        android:textColor="?android:attr/textColorPrimary" />

                    <com.jaredrummler.materialspinner.MaterialSpinner
                        android:id="@+id/update_type_spinner"
                        android:layout_width="match_parent"
                        android:text="@string/select_type"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:layout_marginLeft="10dp" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/cookingTime">

                    <TextView
                        android:layout_height="wrap_content"
                        android:id="@+id/addCookingTime"
                        android:layout_weight="1"
                        tools:text="@string/cooking_time"
                        android:text="@string/cooking_time"
                        android:textColor="?android:attr/textColorPrimary"
                        android:layout_width="110dp" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/updateCookingTime"
                        android:layout_weight="1"
                        android:hint="@string/add_cooking_time" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/preparationTime">

                    <TextView
                        android:text="@string/preparation_time"
                        android:layout_height="wrap_content"
                        android:id="@+id/addPreparationTime"
                        android:layout_weight="1"
                        android:textColor="?android:attr/textColorPrimary"
                        android:layout_width="110dp" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/updatePreparationTime"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:hint="@string/add_preparation_time" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/calories"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/addCalories"
                        android:layout_weight="1"
                        android:textColor="?android:attr/textColorPrimary" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/updateCalories"
                        android:layout_weight="1"
                        android:hint="@string/add_calories" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:id="@+id/descriptionView">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        android:id="@+id/updateDescription"
                        android:hint="@string/add_description"
                        android:gravity="top|center_vertical" />
                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:id="@+id/ingredientsView">

                    <EditText
                        android:layout_width="match_parent"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        android:id="@+id/updateIngredient"
                        android:layout_height="match_parent"
                        android:scrollbars="vertical"
                        android:hint="@string/add_ingredients"
                        style="@style/Widget.AppCompat.EditText"
                        android:gravity="top|center_vertical" />
                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:id="@+id/directionsView">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        android:id="@+id/updateDirections"
                        android:hint="@string/add_directions"
                        android:scrollbars="vertical"
                        android:isScrollContainer="false"
                        android:nestedScrollingEnabled="true"
                        android:gravity="top|center_vertical"
                        style="@style/Widget.AppCompat.EditText" />

                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <Button
                        android:text="@string/update_recipe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/updateButton"
                        style="@style/Widget.AppCompat.Button"
                        android:layout_weight="1" />

                    <Button
                        android:text="@string/delete_recipe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/deleteRecipeButton"
                        android:layout_weight="1" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/edit_recipe"
        android:layout_weight="1"
        app:titleTextColor="@color/whitetext" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
