<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help_delete"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.danyaal.cookhelper.HelpDelete">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/how_can_i_delete_a_recipe"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textSize="34sp"
            android:id="@+id/textView2"
            android:textStyle="bold"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:id="@+id/recipeCardDots"
                    android:src="@drawable/mainpage" />

                <TextView
                    android:text="@string/_1_locate_the_3_dots_on_the_recipe_card_for_the_recipe_you_are_trying_to_delete_2_click_on_the_3_dots_to_expand_the_options_that_can_be_applied_to_recipes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:textSize="16sp" />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:id="@+id/DotMenu"
                    android:src="@drawable/deletemain" />
                <TextView
                    android:text="@string/_3_now_simply_click_the_delete_recipe_option"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
