<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.danyaal.cookhelper.HelpAdd">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/how_can_i_add_recipes"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textSize="34sp"
            android:id="@+id/textView2"
            android:textStyle="bold"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:id="@+id/addImage"
                    android:src="@drawable/addmain" />
                <TextView
                    android:text="@string/_1_locate_the_plus_add_button_on_the_bottom_right_of_your_screen_2_click_on_the_plus_add_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:textSize="16sp" />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:id="@+id/AddRecipeFields"
                    android:src="@drawable/addpage" />
                <TextView
                    android:text="@string/_3_now_simply_fill_out_all_the_required_fields_4_once_finished_click_the_add_recipe_button_to_successfully_add_your_recipe_to_the_database"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
