<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="10dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="0dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        card_view:cardUseCompatPadding="false"
        card_view:cardPreventCornerOverlap="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="148dp"
            app:srcCompat="@drawable/ic_food"
            android:id="@+id/recipeImage"
            android:scaleType="centerCrop"
            card_view:srcCompat="@drawable/ic_food"
            android:contentDescription="@string/recipe_image" />

        <TextView
            android:id="@+id/info_text"
            android:layout_width="100dp"
            android:layout_below="@id/recipeImage"
            tools:text="@string/recipe_name"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/recipe_name"
            android:layout_marginLeft="10dp" />
            <ImageView
                android:id="@+id/overflow"
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_below="@id/recipeImage"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/more_vert_black_24x24"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/overflow_menu" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="3dp" />
</LinearLayout>