<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.danyaal.cookhelper.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:id="@+id/spinLayout"
            android:layout_marginTop="50dp"
            android:layout_height="125dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:text="@string/select_type"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:layout_width="100dp"
                    android:textColor="?android:attr/textColorPrimary" />

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/type_spinner"

                    android:text="@string/select_type"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_width="300dp"
                    android:layout_marginLeft="20dp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:text="@string/select_category"
                    android:layout_height="wrap_content"
                    android:layout_width="100dp"
                    android:id="@+id/textView1"
                    android:textColor="?android:attr/textColorPrimary" />

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/category_spinner"
                    android:layout_width="300dp"
                    android:text="@string/select_category"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycleLayout"
            android:weightSum="1">

            <ListView
                android:id="@+id/list_view"
                android:layout_width="match_parent"
                android:layout_height="308dp"
                android:clipToPadding="true"
                android:scrollbars="vertical"
                android:clipChildren="true"
                android:persistentDrawingCache="all"
                android:layout_weight="1" />

            <Button
                android:text="@string/help"
                android:layout_width="278dp"
                android:layout_height="wrap_content"
                android:id="@+id/helpButton"
                />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
